Quick Fix Links-BG on Mobile
SRFCMSAL-2305

--- a/source/_patterns/20-molecules/teaser/teaser.scss
+++ b/source/_patterns/20-molecules/teaser/teaser.scss
@@ -532,8 +532,6 @@
   }
 
   .teaser__links {
-    // teaser-links should have same bg color as main content
-    background-color: $color-srf-neutral-blacka60;
     margin: 0;
     padding-left: 16px;
 
